--- a/index.html
+++ b/index.html
@@ -7,19 +7,39 @@
     <title>Internet magazine</title>
 </head>
 <body>
-    <div class="blockone center">
+    <div class="header">
+        <div class="content">
         <div class="menu">
             <img src="./img/log.png" alt="logo">
             <img src="./img/lupa.png" alt="lupa">
         </div>
+        <div class="groupmenu">
+            <img src="./img/group.png" alt="group">
         </div>
     </div>
+</div>
+
+        <div class="block">
+            <div class="page">
+                <div class="top">
+            <img src="./img/men.png" alt="photomen">
+        </div>
+        <div class="right">
+            <div class="palka"></div>
+            <img src="./img/photozag.png" alt="phtozag">
+        </div>
+        <div class="man_text">
+           <img src="./img/THE BRAND OF LUXERIOUS FASHION.png" alt="fash">
+        </div>
+    </div>
+</div>
+</div>
 
     <div class="greed">
         <div class="items">
-            <div class="item item1"><img src="./img/woman.png" alt="woman"></div>
-            <div class="item item2"><img src="./img/men2.png" alt="man2"></div>
-            <div class="item item3"><img src="./img/kids.png" alt="kids"></div>
+            <div class="item"><img src="./img/woman.png" alt="woman"></div>
+            <div class="item"><img src="./img/men2.png" alt="man2"></div>
+            <div class="item"><img src="./img/kids.png" alt="kids"></div>
         </div>
         </div>
         <div class="itemslongs">
@@ -28,14 +48,17 @@
 
 <div class="blockthree">
     <div class="text"><h1>Fetured Items</h1>
-    <h2>Shop for items based on what we featured in this week</h2></div>
+    <h2 class="par">Shop for items based on what we featured in this week</h2></div>
 <div class="img">
-    <div class="item item11"><img src="./img/Rectangle 15 copy.png" alt="man1"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="item item22"><img src="./img/fon.png" alt="fon"><img src="./img/telllllllll.png" alt="layer"></div>
-    <div class="item item33"><img src="./img/aaaa.png" alt="3"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="item item44"><img src="./img/zzz.png" alt="4"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="item item55"><img src="./img/ccc.png" alt="5"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="item item66"><img src="./img/mmm.png" alt="6"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="phoyo"><img src="./img/Rectangle 15 copy.png" alt="man1"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="phoyo"><img src="./img/telllllllll.png" alt="layer"><h2>ELLERY X M'O CAPSULE</h2><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="phoyo"><img src="./img/aaaa.png" alt="3"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+</div>
+<div class="two">
+    <div class="phoyo"><img src="./img/zzz.png" alt="4"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="phoyo"><img src="./img/ccc.png" alt="5"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="phoyo"><img src="./img/mmm.png" alt="6"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+</div>
 </div>
 </div>
 </body>
