--- a/index.html
+++ b/index.html
@@ -37,14 +37,34 @@
 
     <div class="greed">
         <div class="items">
-            <div class="item"><img src="./img/woman.png" alt="woman"></div>
-            <div class="item"><img src="./img/men2.png" alt="man2"></div>
-            <div class="item"><img src="./img/kids.png" alt="kids"></div>
-        </div>
+                <img src="./img/woman.png" alt="woman">
+                <div class="tekst">
+                    <p>30% OFF</p>
+                    <h1>FOR WOMAN</h1>
+                </div>
+            </div>
+            <div class="items">
+                <img src="./img/men2.png" alt="man2">
+                <div class="tekst">
+                    <p>HOT DEAL</p>
+                    <h1>FOR MEN</h1>
+                </div>
+            </div>
+            <div class="items">
+                <img src="./img/kids.png" alt="kids">
+                <div class="tekst">
+                    <p>NEW ARRIVALS</p>
+                    <h1>FOR KIDS</h1>
+                </div>
+            </div>
         </div>
         <div class="itemslongs">
-            <div class="longitem"><img src="./img/long.png" alt="long"></div>
-</div>
+            <img src="./img/long.png" alt="long">
+            <div class="tekst2">
+                <p>LUXIROUS & TRENDY</p>
+                    <h1>ACCESORIES</h1>
+            </div>
+    </div>
 
 <div class="blockthree">
     <div class="text"><h1>Fetured Items</h1>
