--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:ital,wght@0,300;0,600;0,800;1,600;1,700&family=Roboto:wght@100;500&family=Rubik+Iso&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Internet magazine</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header center">
         <div class="content">
         <div class="menu">
             <img src="./img/log.png" alt="logo">
             <img src="./img/lupa.png" alt="lupa">
         </div>
-        <div class="groupmenu">
             <img src="./img/group.png" alt="group">
-        </div>
     </div>
 </div>
 
-        <div class="block">
+        <div class="block center">
             <div class="page">
                 <div class="top">
             <img src="./img/men.png" alt="photomen">
@@ -35,51 +36,91 @@
 </div>
 </div>
 
-    <div class="greed">
-        <div class="items">
+    <div class="greed center">
+        <div class="items center">
                 <img src="./img/woman.png" alt="woman">
                 <div class="tekst">
-                    <p>30% OFF</p>
+                    <p class="zxc">30% OFF</p>
                     <h1>FOR WOMAN</h1>
                 </div>
             </div>
-            <div class="items">
+            <div class="items center">
                 <img src="./img/men2.png" alt="man2">
                 <div class="tekst">
-                    <p>HOT DEAL</p>
+                    <p class="zxc">HOT DEAL</p>
                     <h1>FOR MEN</h1>
                 </div>
             </div>
-            <div class="items">
+            <div class="items center">
                 <img src="./img/kids.png" alt="kids">
                 <div class="tekst">
-                    <p>NEW ARRIVALS</p>
+                    <p class="zxc">NEW ARRIVALS</p>
                     <h1>FOR KIDS</h1>
                 </div>
             </div>
         </div>
-        <div class="itemslongs">
+        <div class="itemslongs center">
             <img src="./img/long.png" alt="long">
             <div class="tekst2">
-                <p>LUXIROUS & TRENDY</p>
+                <p class="zxc">LUXIROUS & TRENDY</p>
                     <h1>ACCESORIES</h1>
             </div>
     </div>
 
-<div class="blockthree">
-    <div class="text"><h1>Fetured Items</h1>
-    <h2 class="par">Shop for items based on what we featured in this week</h2></div>
-<div class="img">
-    <div class="phoyo"><img src="./img/Rectangle 15 copy.png" alt="man1"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="phoyo"><img src="./img/telllllllll.png" alt="layer"><h2>ELLERY X M'O CAPSULE</h2><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="phoyo"><img src="./img/aaaa.png" alt="3"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+    <div class="zaq center">
+        <h1>Fetured Items</h1>
+    </div>
+
+    <div class="paq center">
+     <h2>Shop for items based on what we featured in this week</h2>
+    </div>
+<div class="blockthree center">
+    <div class="product">
+        <img src="./img/Rectangle 15 copy.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
+    <div class="product">
+        <img src="./img/deva.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
+    <div class="product">
+        <img src="./img/aaaa.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
 </div>
-<div class="two">
-    <div class="phoyo"><img src="./img/zzz.png" alt="4"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="phoyo"><img src="./img/ccc.png" alt="5"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
-    <div class="phoyo"><img src="./img/mmm.png" alt="6"><h1>ELLERY X M'O CAPSULE</h1><p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p><p>$52.00</p></div>
+
+
+<div class="blockfoo center">
+    <div class="product2">
+        <img src="./img/zzz.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
+    <div class="product2">
+        <img src="./img/ccc.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
+    <div class="product2">
+        <img src="./img/mmm.png" alt="fff">
+        <div class="card">
+<img src="./img/Title and price (2).png" alt="ccard">
+        </div>
+    </div>
+    
 </div>
 </div>
+<div class="bat center">
+<button class="button">Browse All Product</button>
 </div>
-</body>
 </html>
+
+<!-- fkkkfkf -->
